--- a/accsets/css/index.css
+++ b/accsets/css/index.css
@@ -808,6 +808,7 @@ footer a:hover{
         padding: 20px 30px;
     }
     #hero{
+        height: 80vh;
         padding: 0 20px;
         background-position: 30%;
         overflow: hidden;
