--- a/accsets/css/index.css
+++ b/accsets/css/index.css
@@ -129,6 +129,7 @@ body{
     list-style: none;
     padding: 0 20px;
     position: relative;
+    display: inline-block;
 }
 #navbar li a{
     text-decoration: none;
@@ -155,7 +156,63 @@ body{
     bottom:-4px;
     left:20px;
 }
+#lg-bag{
+    position:relative;
+}
+#lg-bag:hover ~ .boxcart{
+    display:block;
+}
+.boxcart{
+    background-color: #e3e6f3;
+    display:none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    min-height: 10vh;
+}
+.boxcart .SumPrice p{
+    margin: 10px 0 10px 40px;
+    font-weight: 700;
+    color: #000;
+}
+.boxcart .SumPrice p span{
+    margin-left: 50px;
+    color: #009688;
+}
+.SumPrice h6{
+    margin-left: 40px;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+.boxcart table,th,td{
+    text-align: center;
+    border: 1px solid #08817910;
+    border-collapse: collapse;
+}
+.boxcart table td:nth-child(2){
+    font-weight: 700;
+}
+.boxcart table td:nth-child(3){
+    font-weight: 700;
+    color: #009688;
+}
+.boxcart table tr th{
+    line-height: 30px;
+}
+.boxcart table tr th:nth-child(2){
+    width: 240px;
+}
+.boxcart table tr th:nth-child(3){
+    width: 140px;
+}
+.boxcart table tr th:nth-child(4){
+    width: 60px;
+}
 
+.boxcart table tr img{
+    width:90px;
+    margin: 10px;
+}
 #mobile{
     display: none;
     align-items: center;
@@ -874,6 +931,7 @@ footer a:hover{
     .baybanking{
         width: 40%;
     }
+    
     /*
     #banner3 .banner-box{
         width: 100%;
