--- a/accsets/css/login.css
+++ b/accsets/css/login.css
@@ -12,6 +12,48 @@
     background-color: #fddde4;
     cursor: pointer;
 }
+#user{
+    position: relative;
+}
+.user{
+    border: 1px solid #0881797e;
+    background-color: rgb(227, 230, 243);
+    right: 60px;
+    top: 100%;
+    position: absolute;
+}
+.user .user-name{
+    width: 100%;
+    display: flex;
+}
+.user .user-name .img-user{
+    width: 30%;
+}
+.user .user-name p{
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 50px;
+    margin: 10px;
+    width: 70%;
+}
+.map p{
+    margin: 10px;
+}
+#user ~ .user{
+    display: none;
+}
+#user:hover ~.user{
+    display: block;
+}
+.img-users{
+    margin: 10px;
+    width: 50px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
 @media (max-width:799px) {
     #feature .fe-box:nth-child(3){
         display:block;
