--- a/accsets/css/index.css
+++ b/accsets/css/index.css
@@ -170,6 +170,12 @@ body{
     right: 0;
     min-height: 10vh;
 }
+.box-croll{
+    /*height: 500px;*/
+    overflow-y: scroll;
+    min-height: 10px;
+    max-height: 500px;
+}
 .boxcart .SumPrice p{
     margin: 10px 0 10px 40px;
     font-weight: 700;
@@ -731,7 +737,7 @@ footer a:hover{
 .modal-help{
     right: 0px;
 }
-/*Start Media Query*/
+/*Start Media Query */
 @media (max-width:799px) {
     .section-p1{
         padding: 40px 40px;
@@ -761,7 +767,7 @@ footer a:hover{
     #mobile{
         display: flex;
         align-items: center;
-    justify-content:flex-end;
+        justify-content:flex-end;
     }
     #mobile i{
         color: #1a1a1a;
@@ -935,6 +941,6 @@ footer a:hover{
     /*
     #banner3 .banner-box{
         width: 100%;
-    }
-    */
+    }*/
+    
 }
