--- a/accsets/css/index.css
+++ b/accsets/css/index.css
@@ -191,6 +191,7 @@ body{
     font-size: 15px;
 }
 .boxcart table,th,td{
+    cursor: pointer;
     text-align: center;
     border: 1px solid #08817910;
     border-collapse: collapse;
